# Personal-Projects

./: .gitignore  Quant Trading Algorithm.ipynb  README.md  news_dashboard.ipynb  project2.ipynb  pyproject.toml  requirements.txt  run_daily.py  streamlit_app.py
.streamlit/: config.toml
data/processed/: AAPL.csv  ADBE.csv  AMD.csv  AMZN.csv  AVGO.csv  CRM.csv  GOOGL.csv  IBM.csv  INTC.csv  IWM.csv  META.csv  MSFT.csv  NFLX.csv  NOW.csv  NVDA.csv  ORCL.csv  PANW.csv  QCOM.csv  QQQ.csv  SAP.csv  SPY.csv  TSM.csv
data/raw/: AAPL.csv  ADBE.csv  AMD.csv  AMZN.csv  AVGO.csv  CRM.csv  GOOGL.csv  IBM.csv  INTC.csv  IWM.csv  META.csv  MSFT.csv  NFLX.csv  NOW.csv  NVDA.csv  ORCL.csv  PANW.csv  QCOM.csv  QQQ.csv  SAP.csv  SPY.csv  TSM.csv
models/: xgb_classification.json  xgb_classification_meta.json
pipeline/: backtest.py  config.py  core.py  intraday.py  intraday_backtest.py  ml.py  news.py
scripts/: collect_l2_snapshots.py  generate_sample_data.py  replay_stream.py  serve_inference.py  train_baseline.py  train_deeplob.py
src/lob_predictor/: __init__.py  baseline.py  data.py  deeplob.py  exchanges.py  features.py  ingestion.py  labels.py  sample_data.py  schema.py  service.py  streaming.py
tests/: test_exchanges.py  test_features_labels.py  test_service.py
