[project]
name = "lob-prediction-engine"
version = "0.1.0"
description = "Limit order book short-horizon price movement prediction engine."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "torch>=2.0",
    "streamlit>=1.35",
    "yfinance>=0.2",
    "plotly>=5.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
